// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButton renders with all props set 1`] = `
<Button
  block={false}
  ghost={false}
  htmlType="submit"
  loading={false}
  type="primary"
>
  Submit
</Button>
`;

exports[`SubmitButton renders with loading 1`] = `
<Button
  block={false}
  ghost={false}
  htmlType="submit"
  loading={true}
  type="primary"
>
  Submit
</Button>
`;
